Binary String Commit

--- a/String Problems/index.html
+++ b/String Problems/index.html
@@ -12,5 +12,6 @@
     <h1>Open Console</h1>
 </body>
 <script src="/String Problems/js/NaivePatternSearch.js"></script>
+<script src="/String Problems//js/BinaryString.js"></script>
 
 </html>
