--- a/String Problems/index.html
+++ b/String Problems/index.html
@@ -13,5 +13,6 @@
 </body>
 <script src="/String Problems/js/NaivePatternSearch.js"></script>
 <script src="/String Problems//js/BinaryString.js"></script>
+<script src="/String Problems/js/ImplementStrStr.js"></script>
 
 </html>
