StringA3 file added

--- a/String Problems/index.html
+++ b/String Problems/index.html
@@ -14,5 +14,6 @@
 <script src="/String Problems/js/NaivePatternSearch.js"></script>
 <script src="/String Problems//js/BinaryString.js"></script>
 <script src="/String Problems/js/ImplementStrStr.js"></script>
+<script src="/String Problems//js//StringA3.js"></script>
 
 </html>
